Update project configuration and dependencies; add environment variables to .gitignore, integrate @google/genai for AI-driven recommendations, and enhance README with detailed app features and usage instructions.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/genai": "^1.29.0",
     "lucide-react": "^0.487.0",
     "motion": "*",
     "react": "^18.3.1",
